<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/text_preference_category"
        app:title="@string/sync_header">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/jobPeriodic"
            app:entryValues="@array/jobPeriodic_values"
            app:icon="@drawable/ic_hourglass"
            app:key="jobPeriodic"
            app:title="@string/jobPeriodic_title"
            app:useSimpleSummaryProvider="true" />

        <my.mmu.Kaixuanrssnewsreader.ui.setting.SliderPreference
            android:max="10000"
            app:defaultValue="1000"
            app:icon="@drawable/ic_articles"
            app:key="entriesLimitPerFeed"
            app:min="10"
            app:seekBarIncrement="10"
            app:showSeekBarValue="true"
            app:summary="@string/entries_limit_summary"
            app:title="@string/entries_limit_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/text_preference_category"
        app:title="@string/interface_header">

        <SwitchPreferenceCompat
            app:widgetLayout="@layout/preference_switch_m3"
            app:icon="@drawable/ic_night_mode"
            app:key="night"
            app:summaryOff="@string/theme_summary_off"
            app:summaryOn="@string/theme_summary_on"
            app:title="@string/theme_title" />

        <SwitchPreferenceCompat
            app:widgetLayout="@layout/preference_switch_m3"
            app:defaultValue="false"
            app:icon="@drawable/ic_summary"
            app:key="displaySummary"
            app:summaryOff="@string/display_summary_off"
            app:summaryOn="@string/display_summary_on"
            app:title="@string/display_summary_title" />

        <SwitchPreferenceCompat
            app:widgetLayout="@layout/preference_switch_m3"
            app:defaultValue="true"
            app:icon="@drawable/ic_marker"
            app:key="highlightText"
            app:summaryOff="@string/highlight_text_off"
            app:summaryOn="@string/highlight_text_on"
            app:title="@string/highlight_text_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/text_preference_category"
        app:title="@string/translation_header">

        <Preference
            app:key="groq_api_key_setup"
            app:summary="@string/groq_api_key_setup_summary"
            app:title="@string/groq_api_key_setup_title"
            app:icon="@drawable/api_settings"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:icon="@drawable/api_settings"
            app:key="groqApiKey"
            app:summary="@string/groq_api_setting_summary"
            app:title="@string/groq_api_setting_title"
            android:dialogTitle="@string/groq_api_setting_dialog_title" />

        <EditTextPreference
            app:icon="@drawable/ai_model"
            app:key="groqModel"
            app:summary="@string/groqModel_summary"
            app:title="@string/groqModel_title"
            android:dialogTitle="@string/groqModel_dialog_title"
            android:dialogMessage="@string/groqModel_dialog_description" />

        <my.mmu.Kaixuanrssnewsreader.ui.setting.SliderPreference
            android:max="500"
            app:defaultValue="150"
            app:icon="@drawable/ic_summary"
            app:key="summaryLength"
            app:min="50"
            app:seekBarIncrement="25"
            app:showSeekBarValue="true"
            app:summary="@string/summary_length_summary"
            app:title="@string/summary_length_title" />

        <ListPreference
            app:entries="@array/defaultTranslationLanguage"
            app:entryValues="@array/defaultTranslationLanguage_values"
            app:icon="@drawable/ic_baseline_language_24"
            app:key="defaultTranslationLanguage"
            app:title="@string/translationLanguage_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:widgetLayout="@layout/preference_switch_m3"
            app:defaultValue="false"
            app:icon="@drawable/ic_auto_translate"
            app:key="autoTranslate"
            app:summaryOff="@string/auto_translate_off"
            app:summaryOn="@string/auto_translate_on"
            app:title="@string/auto_translate_title" />

        <my.mmu.Kaixuanrssnewsreader.ui.setting.SliderPreference
            android:max="100"
            app:defaultValue="50"
            app:icon="@drawable/ic_language"
            app:key="confidenceThreshold"
            app:min="10"
            app:seekBarIncrement="10"
            app:showSeekBarValue="true"
            app:summary="@string/confidence_threshold_summary"
            app:title="@string/confidence_threshold_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/text_preference_category"
        app:title="@string/text_to_speech_header">

        <Preference
            android:key="key_text_to_speech_settings"
            android:summary="@string/text_to_speech_settings_summary"
            android:title="@string/text_to_speech_settings"
            app:icon="@drawable/ic_speech" />

        <SwitchPreferenceCompat
            app:widgetLayout="@layout/preference_switch_m3"
            app:defaultValue="false"
            app:icon="@drawable/ic_music"
            app:key="backgroundMusic"
            app:summaryOff="@string/background_music_summary_off"
            app:summaryOn="@string/background_music_summary_on"
            app:title="@string/background_music" />

        <ListPreference
            app:defaultValue="default"
            app:entries="@array/backgroundMusicFile"
            app:entryValues="@array/backgroundMusicFile_values"
            app:icon="@drawable/ic_music_file"
            app:key="backgroundMusicFile"
            app:title="@string/background_music_file"
            app:useSimpleSummaryProvider="true" />

        <my.mmu.Kaixuanrssnewsreader.ui.setting.SliderPreference
            android:max="100"
            app:defaultValue="50"
            app:icon="@drawable/ic_volume"
            app:key="backgroundMusicVolume"
            app:min="10"
            app:seekBarIncrement="10"
            app:showSeekBarValue="true"
            app:summary="@string/background_music_volume_summary"
            app:title="@string/background_music_volume" />

    </PreferenceCategory>
</PreferenceScreen>