<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/allEntriesFragment">

    <fragment
        android:id="@+id/feedFragment"
        android:name="my.mmu.Kaixuanrssnewsreader.ui.feed.FeedFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_feed" >
        <action
            android:id="@+id/action_feedFragment_to_allEntriesFragment"
            app:destination="@id/allEntriesFragment"
            app:popUpTo="@id/allEntriesFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_feedFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:popUpTo="@id/settingsFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/allEntriesFragment"
        android:name="my.mmu.Kaixuanrssnewsreader.ui.allentries.AllEntriesFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_all_entries" >
        <action
            android:id="@+id/action_allEntriesFragment_to_feedFragment"
            app:destination="@id/feedFragment"
            app:popUpTo="@id/feedFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_allEntriesFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:popUpTo="@id/settingsFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/helpFragment"
        android:name="my.mmu.Kaixuanrssnewsreader.ui.help.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="my.mmu.Kaixuanrssnewsreader.ui.setting.SettingsFragment"
        android:label="@string/setting" >
        <action
            android:id="@+id/action_settingsFragment_to_allEntriesFragment"
            app:destination="@id/allEntriesFragment"
            app:popUpTo="@id/allEntriesFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_settingsFragment_to_feedFragment"
            app:destination="@id/feedFragment"
            app:popUpTo="@id/feedFragment"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>