<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/selected_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="0 selected"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/menu_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete"
        android:padding="8dp"
        android:src="@drawable/ic_trash" />

    <ImageButton
        android:id="@+id/menu_mark_as_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/mark_as_read"
        android:padding="8dp"
        android:src="@drawable/ic_read" />

    <ImageButton
        android:id="@+id/menu_translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/translate"
        android:padding="8dp"
        android:src="@drawable/ic_language" />

    <ImageButton
        android:id="@+id/menu_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/translate"
        android:padding="8dp"
        android:src="@drawable/ic_cancel" />


</LinearLayout>
